[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rankers"
version = "0.1.0"
dependencies = [
  "torch",
  "transformers",
  "accelerate>=0.26.0",
  "datasets",
  "ir-measures",
  "pandas",
  "more_itertools",
]
requires-python = ">=3.10"
authors = [
  {name = "Andrew Parry", email = "0andrewparry@gmail.com"}
]
maintainers = [
  {name = "Andrew Parry", email = "0andrewparry@gmail.com"}
]
description = "A package for training and evaluating neural rankers."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["pytorch", "transformers", "ranking", "information retrieval"]
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/Parry-Parry/rankers.git"

[project.optional-dependencies]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.19",
]
dev = [
    "ruff==0.11.7",
    "pytest>=7.0",
    "ir-datasets>=0.5.0",
]